removido vulnerabilidades
